--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
     runtime-versions:
       java: corretto17
     commands:
-      - echo Installing dependencies...
+      - echo Installing dependencie...
       - apt-get update
       - apt-get install -y maven
   pre_build:
