--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,3 +15,6 @@ phases:
   post_build:
     commands:
       - echo Pushing the Docker image to Amazon beansTalk...
+artifacts:
+  files:
+    - '**/*'
